--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </section>
 
             <section class="repos">
-                <input type="text" class="filter-repos" placeholder="Narrow your search">
+                <input type="text" class="filter-repos hide" placeholder="Narrow your search">
                 <ul class="repo-list"></ul>
             </section>
             <section class="repo-data hide">
