--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
             <h1>Welcome to the GitHub API Project!</h1>
             <section class="intro">
                 <div class="overview"></div>
-                <button class="hide get-repos">Get Repos</button>
             </section>
 
             <section class="repos">
-                <input type="text" class="filter-repos" placeholder="Narrow your search">
+                <input type="text" class="filter-repos hide" placeholder="Narrow your search">
                 <ul class="repo-list"></ul>
             </section>
             <section class="repo-data hide">
