Styling changes and renaming files

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>API Project</title>
+        <title>GitHub Repo Gallery</title>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="js/script.js" defer></script>
     </head>
 
     <body>
         <main class="container">
-            <h1>Welcome to the GitHub API Project!</h1>
+            <h1>GitHub Repo Gallery</h1>
             <section class="intro">
                 <div class="overview"></div>
             </section>
