--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="repo-data hide">
             </section>
             <div class="button-container">
-                <button class="back hide">View Repos</button>
+                <button class="view-repos hide">View Repos</button>
             </div>
         </main>
     </body>
