--- a/index.html
+++ b/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GitHub Repo Gallery</title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald:wght@500&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+            crossorigin="anonymous" />
+        <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/styles.css" />
         <script src="js/script.js" defer></script>
     </head>
 
     <body>
         <main class="container">
-            <h1>GitHub Repo Gallery</h1>
+            <div class="badge">
+                <div class="circle"></div>
+            </div>
+            <h1><i class="fab fa-github-alt"></i> GitHub Repo Gallery</h1>
             <section class="intro">
                 <div class="overview"></div>
             </section>
 
             <section class="repos">
-                <input type="text" class="filter-repos hide" placeholder="Narrow your search">
+                <input type="text" class="filter-repos hide" placeholder="Search by name or language" />
                 <ul class="repo-list"></ul>
             </section>
-            <section class="repo-data hide">
-            </section>
+            <section class="repo-data hide"></section>
             <div class="button-container">
-                <button class="view-repos hide">View Repos</button>
+                <button class="view-repos hide">Back to Repo Gallery</button>
             </div>
         </main>
     </body>
