A few text changes

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </section>
 
             <section class="repos">
-                <input type="text" class="filter-repos hide" placeholder="Narrow your search" />
+                <input type="text" class="filter-repos hide" placeholder="Search by name or language" />
                 <ul class="repo-list"></ul>
             </section>
             <section class="repo-data hide"></section>
             <div class="button-container">
-                <button class="view-repos hide">Back to View Repos</button>
+                <button class="view-repos hide">Back to Repo Gallery</button>
             </div>
         </main>
     </body>
