Remove main language from repos call

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </section>
 
             <section class="repos">
-                <input type="text" class="filter-repos hide" placeholder="Search by name or language" />
+                <input type="text" class="filter-repos hide" placeholder="Search by name" />
                 <ul class="repo-list"></ul>
             </section>
             <section class="repo-data hide"></section>
