Updates color scheme to match portfolio site

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     <body>
         <main class="container">
+            <!-- consider removing the badge -->
             <div class="badge">
                 <div class="circle"></div>
             </div>
+            
             <h1><i class="fab fa-github-alt"></i> GitHub Repo Gallery</h1>
             <section class="intro">
                 <div class="overview"></div>
